batch-mode/ai-json-template-derive/tests/trybuild/fail_unsupported_type.stderr
error: Unsupported field type for AiJsonTemplate: i32
  --> tests/trybuild/fail_unsupported_type.rs:10:13
   |
10 |     number: i32,
   |             ^^^
